k8s/3.nodeApp/1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsApplication
  namespace: nodeProject
  labels:
    app: nodejsApplication
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejsApplication
  template:
    metadata:
      labels:
        app: nodejsApplication
    spec:
      containers:
      - name: tanmayfuse1221/nodejsApplication
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
