k8s/3.nodeApp/2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: nodeProject
spec:
  selector:
    app.kubernetes.io/name: nodejsApplication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
